[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9", features = ["macros", "matched-path", "multipart", "original-uri", "query", "tokio", "tower-log", "tracing", "ws", "form", "json", "http1", "http2"]}
bincode = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
